--- a/pages/main.html
+++ b/pages/main.html
@@ -3,4 +3,4 @@
 <body>
   
  <h1>Inner Core Archives</h1>
-   <p>An unblocked archiv.
+  <p>An unblocked archive containing games, media, and other objects for your use.</p>
