--- a/pages/main.html
+++ b/pages/main.html
@@ -3,4 +3,4 @@
 <body>
   
  <h1>Inner Core Archives</h1>
-  <p>An unblocked archive containing games, media, and other objects for your use.</p>
+  <p>An unblocked archive containing games, media, and other objects for your use. <a href="https://mail.google.com/mail/?view=cm&fs=1&to=U-2014001795-U@outlook.com">Request something here.</a></p>
