--- a/pages/securi-wall.html
+++ b/pages/securi-wall.html
@@ -6,7 +6,7 @@
  
 <div>
 <label for="code">Enter code here:</label>
-<input type="password" id='"04142009" name="code"
+<input type="password" id='"04142009" name="code" required>
 </div>
 
 <input type="submit" value="Submit code">
