--- a/pages/securi-wall.html
+++ b/pages/securi-wall.html
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
 <html>
 <body>
-  
- <p>A passcode is required to go beyond this point. Please enter the passcode below.</p>
- 
-<div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
-</div>
 
-<div>
-    <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="pass" name="password"
-           minlength="8" required>
-</div>
-
-<input type="submit" value="Sign in">
+<p>Looks like you ended up in the wrong page, <a href="https://ccc-chavez.github.io/ICA/pages/main.html">maybe you meant to go here.</a></p>
