--- a/pages/securi-wall.html
+++ b/pages/securi-wall.html
@@ -2,4 +2,4 @@
 <html>
 <body>
 
-<p>Looks like you ended up in the wrong page, <a href="https://ccc-chavez.github.io/ICA/pages/main.html">maybe you meant to go here.</a></p>
+<p>Looks like you ended up in the wrong page, <a href="https://ccc-chavez.github.io/ICA/pages/main.html">maybe you meant to go her<a href="https://ccc-chavez.github.io/ICA/pages/securi-wall-2.html">e.</a>.</a></p>
