--- a/pages/main.html
+++ b/pages/main.html
@@ -2,5 +2,14 @@
 <html>
 <body>
   
- <h1>Inner Core Archives</h1>
+ <h>Inner Core Archives</h>
   <p>An unblocked archive containing games, media, and other objects for your use. <a href="https://mail.google.com/mail/?view=cm&fs=1&to=U-2014001795-U@outlook.com">Request something here.</a></p>
+  <p></p>
+  <p></p>
+  <h>GAMES</h>
+  <p></p>
+  <p></p>
+  <h>MEDIA</h>
+  <p></p>
+  <p></p>
+  <p><a href="ccc-chvez/github.io/pages/easter-eggs/ct.html">???</a></p>
